Related: fdo#34319 document requirements for MSWord FTC/LID emulation