sw/source/filter/ww8/ww8par.hxx
@@ -1117,7 +1117,8 @@ private:
         pReffingStck = 0;
     }
     void DeleteAnchorStk()  { DeleteStk( pAnchorStck ); pAnchorStck = 0; }
-    bool AddTextToParagraph(const String& sAddString);
+    bool emulateMSWordAddTextToParagraph(const String& sAddString);
+    bool simpleAddTextToParagraph(const String& sAddString);
     bool HandlePageBreakChar();
     bool ReadChar(long nPosCp, long nCpOfs);
     bool ReadPlainChars(WW8_CP& rPos, long nEnd, long nCpOfs);
